--- a/templates/archive.html
+++ b/templates/archive.html
@@ -1,2 +1,4 @@
-Here you can find all my previous posts:
-$partial("templates/post-list.html")$
+<div class="row">
+  <h1>Previous posts</h2>
+  $partial("templates/post-list.html")$
+</div>
