--- a/templates/post.html
+++ b/templates/post.html
@@ -1,8 +1,10 @@
-<div class="info">
+<div class="row">
+<h2>$title$</h2>
+  <div class="info">
     Posted on $date$
     $if(author)$
-        by $author$
+	by $author$
     $endif$
 </div>
-
 $body$
+</div>
