--- a/css/default.css
+++ b/css/default.css
@@ -1,57 +1,1 @@
-body {
-    color:black;
-    font-size:16px;
-}
-
-div#logo a{
-    color:black;
-    float:left;
-    font-size:30px;
-    font-weight:bold;
-    text-decoration:none;
-    padding:25px 0px 6px 0px;
-}
-
-div#navigation{
-    text-align:right;
-    border-bottom:solid 1px;
-    border-color:#999999;
-    padding:35px 0px 6px 0px;
-}
-
-div#navigation a{
-    color:black;
-    font-size:20px;
-    font-weight:bold;
-    margin-left:12px;
-    text-decoration:none;
-}
-
-div#footer{
-    border-top:solid 1px;
-    border-color:#999999;
-    color:#555;
-    font-size:12px;
-    margin-top:30px;
-    padding:12px 0px 12px 0px;
-    text-align:center;
-}
-
-div#content{
-    padding:30px 0px 0px 0px;
-}
-
-h1{
-    font-size:24px;
-}
-
-h2{
-    font-size:20px;
-}
-
-div.info{
-    color:#555;
-    font-size:14px;
-    font-style:italic;
-    padding:0px 0px 15px 0px;
-}
+body{color:black;font-size:16px}div#logo a{color:black;float:left;font-size:30px;font-weight:bold;text-decoration:none;padding:25px 0px 6px 0px}div#navigation{text-align:right;border-bottom:solid 1px;border-color:#999999;padding:35px 0px 6px 0px}div#navigation a{color:black;font-size:20px;font-weight:bold;margin-left:12px;text-decoration:none}div#footer{border-top:solid 1px;border-color:#999999;color:#555;font-size:12px;margin-top:30px;padding:12px 0px 12px 0px;text-align:center}div#content{padding:30px 0px 0px 0px}h1{font-size:24px}h2{font-size:20px}div.info{color:#555;font-size:14px;font-style:italic;padding:0px 0px 15px 0px}
