--- a/_layouts/tag_page.html
+++ b/_layouts/tag_page.html
@@ -9,3 +9,11 @@ layout: page
   {% endfor %}
   </ul>
 </div>
+
+<div class="rss-subscribe">
+  <p>
+    <a href="{{ 'feed.xml' | relative_url }}">subscribe via <svg class="svg-icon">
+        <use xlink:href="{{ '/assets/minima-social-icons.svg#rss' | relative_url }}"></use>
+      </svg> <span>{{ site.rss | escape }} RSS</span></a>
+  </p>
+</div>
