--- a/_layouts/month_archive.html
+++ b/_layouts/month_archive.html
@@ -23,3 +23,11 @@ layout: default
     </div>
   </div>
 </article>
+
+<div class="rss-subscribe">
+  <p>
+    <a href="{{ 'feed.xml' | relative_url }}">subscribe via <svg class="svg-icon">
+        <use xlink:href="{{ '/assets/minima-social-icons.svg#rss' | relative_url }}"></use>
+      </svg> <span>{{ site.rss | escape }} RSS</span></a>
+  </p>
+</div>
