--- a/_includes/head.html
+++ b/_includes/head.html
@@ -7,4 +7,8 @@
   <link rel="stylesheet" href="{{ '/assets/css/fira_code.css' | relative_url }}">
   <link rel="stylesheet" href="{{ "/assets/main.css" | relative_url }}">
   {%- feed_meta -%}
+  
+  {% if site.tags != "" %}
+    {% include collecttags.html %}
+  {% endif %}
 </head>
