--- a/_includes/header.html
+++ b/_includes/header.html
@@ -17,7 +17,7 @@
             {%- for path in page_paths -%}
               {%- assign my_page = site.pages | where: "path", path | first -%}
 
-              {%- if my_page.title and my_page.ignore-nav != true and my_page.title != site.title -%}
+              {%- if my_page.title and my_page.nav-include == true and my_page.title != site.title -%}
                 <a class="page-link {{ my_page.title | downcase }}" href="{{ my_page.url | relative_url }}">{{ my_page.title | escape }}</a>
               {%- endif -%}
             {%- endfor -%}
