--- a/_layouts/tag_page.html
+++ b/_layouts/tag_page.html
@@ -4,16 +4,8 @@ layout: page
 
 <div class="archive">
   <ul>
-    {% for post in page.posts %}
+    {% for post in site.tags[page.tag] %}
     <li> <a href="{{ post.url }}"><span class="archive-date">{{ post.date | date_to_string }}</span> {{ post.title }}</a></li>
   {% endfor %}
   </ul>
-</div>
-
-<div class="rss-subscribe">
-  <p>
-    <a href="{{ 'feed.xml' | relative_url }}">subscribe via <svg class="svg-icon">
-        <use xlink:href="{{ '/assets/minima-social-icons.svg#rss' | relative_url }}"></use>
-      </svg> <span>{{ site.rss | escape }} RSS</span></a>
-  </p>
 </div>
