--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -24,12 +24,6 @@ layout: default
   <div class="post-content e-content" itemprop="articleBody">
     {{ content }}
   </div>
-  <div class="disclaimer" itemprop="articleSection">
-    <p>
-      Rename: If you want to let me know your opinion and discuss this article you can simply 
-      <a href="">email me</a>.
-    </p>
-  </div>
 
   <ul class="paginator post-links clearfix">
   {% if page.previous.url %}
@@ -44,22 +38,25 @@ layout: default
   {% endif %}
   </ul>
 
-  <div class="tags">
-    <p>Tags:</p>
-    <ul>
-      {%- for tag in page.tags -%}
-      {% capture tag_name %}{{ tag }}{% endcapture %}
-      <li>
-        <p>
-          [ <a class="tag-link" href="/tag/{{tag_name}}" rel="category tag">
-              {{ tag_name }}
-            </a> 
-          ]
-        </p>
-      </li>
-      {%- endfor -%}
-    </ul>
-  </div>
+  {% if page.tags %}
+    <div class="tags">
+      <p>Tags:</p>
+      <ul>
+        {%- for tag in page.tags -%}
+        {% capture tag_name %}{{ tag }}{% endcapture %}
+        <li>
+          <p>
+            [ <a class="tag-link" href="/tag/{{tag_name}}" rel="category tag">
+                {{ tag_name }}
+              </a> 
+            ]
+          </p>
+        </li>
+        {%- endfor -%}
+      </ul>
+    </div>
+  {% endif %}
+
 
   <a class="u-url" href="{{ page.url | relative_url }}" hidden></a>
 </article>
