--- a/_includes/head.html
+++ b/_includes/head.html
@@ -4,6 +4,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   {%- include fav-icon.html -%}
   {%- seo -%}
+  <meta property="og:image" content="{{ '/assets/img/socialpreview.jpg' | relative_url }}">
   <link rel="stylesheet" href="{{ '/assets/css/fira_code.css' | relative_url }}">
   <link rel="stylesheet" href="{{ "/assets/main.css" | relative_url }}">
   {%- feed_meta -%}
