Fix og image url

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -6,9 +6,9 @@
   {%- seo -%}
 
   {% if page.image %}
-    <meta property="og:image" content="{{ site.url }}/assets/img/posts/{{ page.image }}">
+    <meta property="og:image" content="assets/img/posts/{{ page.image }}">
   {% else %}
-    <meta property="og:image" content="{{ site.url }}/assets/img/socialpreview.jpg">
+    <meta property="og:image" content="assets/img/socialpreview.jpg">
   {% endif %}
 
   <link rel="stylesheet" href="{{ '/assets/css/fira_code.css' | relative_url }}">
