--- a/_includes/head.html
+++ b/_includes/head.html
@@ -7,8 +7,10 @@
 
   {% if page.image %}
     <meta property="og:image" content="assets/img/posts/{{ page.image }}">
+    <meta property="twitter:image" content="assets/img/posts/{{ page.image }}">
   {% else %}
     <meta property="og:image" content="assets/img/socialpreview.jpg">
+    <meta property="twitter:image" content="assets/img/socialpreview.jpg">
   {% endif %}
 
   <link rel="stylesheet" href="{{ '/assets/css/fira_code.css' | relative_url }}">
