--- a/_includes/head.html
+++ b/_includes/head.html
@@ -12,6 +12,7 @@
     <meta property="og:image" content="assets/img/socialpreview.jpg">
     <meta property="twitter:image" content="assets/img/socialpreview.jpg">
   {% endif %}
+  <meta name="twitter:card" content="summary_large_image">
 
   <link rel="stylesheet" href="{{ '/assets/css/fira_code.css' | relative_url }}">
   <link rel="stylesheet" href="{{ "/assets/main.css" | relative_url }}">
