--- a/_includes/head.html
+++ b/_includes/head.html
@@ -7,10 +7,10 @@
 
   {% if page.image %}
     <meta property="og:image" content="assets/img/posts/{{ page.image }}">
-    <meta property="twitter:image" content="assets/img/posts/{{ page.image }}">
+    <meta name="twitter:image" content="assets/img/posts/{{ page.image }}">
   {% else %}
     <meta property="og:image" content="assets/img/socialpreview.jpg">
-    <meta property="twitter:image" content="assets/img/socialpreview.jpg">
+    <meta name="twitter:image" content="assets/img/socialpreview.jpg">
   {% endif %}
   <meta name="twitter:card" content="summary_large_image">
 
