--- a/_sass/minima/_insecure.scss
+++ b/_sass/minima/_insecure.scss
@@ -166,6 +166,11 @@ hr {
   }
 }
 
+strong {
+  font-weight: bold;
+  color: $grey-color-light;
+}
+
 .avatar {
   margin-right: $spacing-unit;
   max-width: 150px;
