--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -2,6 +2,8 @@
 layout: default
 ---
 
+
+
 <h2 class="post-list-heading">
   <div class="background">
     <span>[</span>
@@ -17,8 +19,9 @@ layout: default
     <p class="post-meta">
       <time class="dt-published" datetime="{{ page.date | date_to_xmlschema }}" itemprop="datePublished">
         {%- assign date_format = site.minima.date_format | default: "%b %-d, %Y" -%}
-        <span>{{ page.date | date: date_format }}</span>
+        <span>{{ page.date | date: date_format }},</span>
       </time>
+      {% include read_time.html %}
     </p>
   </header>
 
