Fix lists formatting in posts. Publish "Getting to know memblock" blog entry.

--- a/_sass/minima/_base.scss
+++ b/_sass/minima/_base.scss
@@ -89,6 +89,10 @@ ul, ol {
 }
 
 li {
+  &:not(:last-child){
+    margin-bottom: $spacing-unit * 0.27;
+  }
+
   > ul,
   > ol {
     margin-bottom: 0;
