Add part 1 of memblock alloc blog post. Hack syntax highlight around to format line numbering nicely. Add new twitter image preview

--- a/_sass/minima/_syntax-highlighting.scss
+++ b/_sass/minima/_syntax-highlighting.scss
@@ -78,7 +78,7 @@
   .gs    { font-weight: bold } // Generic.Strong
 
   // Miscellaneous
-  .err   { color: #a61717; background-color: #e3d2d2 } // Lexer Error
+  .err   { color: #FFFF; font-size: 130% } // Lexer Error
   .gr    { color: #a00 } // Generic.Error ??
   .w     { color: #bbb } // Text.Whitespace
   .ge    { font-style: italic } // Generic.Emph
