--- a/_includes/social.html
+++ b/_includes/social.html
@@ -1,6 +1,6 @@
 <ul class="social-media-list">
   {%- if site.linkedin_username -%}<li><a href="https://www.linkedin.com/in/{{ site.linkedin_username| cgi_escape | escape }}"><svg class="svg-icon"><use xlink:href="{{ '/assets/minima-social-icons.svg#linkedin' | relative_url }}"></use></svg> <span class="username">Karolina Stolarek</span></a></li>{%- endif -%}
-  {%- for mst in site.mastodon -%}{%- if mst.username and mst.instance -%}<li><a
+  {%- for mst in site.mastodon -%}{%- if mst.username and mst.instance -%}<li><a rel="me"
     href="https://{{ mst.instance| cgi_escape | escape}}/@{{mst.username}}"><svg class="svg-icon">
       <use xlink:href="{{ '/assets/minima-social-icons.svg#mastodon' | relative_url }}"></use>
     </svg> <span class="username">{{ mst.username|escape }}</span></a></li>{%- endif -%}{%- endfor -%}
